# liboousb2k

./: .vinfo  AUTHORS  ChangeLog  Makefile.am  README.md  README.orig  TODO  autogen.sh  config.h.in  configure.ac  ltversion.sh  oou2k-test.c  oousb2k-config.in  oousb2k.c  oousb2k.h
